--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-    <h1>Hello world</h1>
-    <h2>
-        <%=message%>
-    </h2>
+    <h1>This is homepage</h1>
 </body>
 
 </html>
